# zebral

./: .gitignore  CMakeLists.txt  README.md  format_code.bat  format_code.sh
.github/workflows/: cmake.yml  cmake_win.yml
app/: CMakeLists.txt  zebral_camera_specs.cpp  zebral_file2c.cpp  zebral_get.cpp  zebral_terminal.cpp
camera/: CMakeLists.txt
camera/inc/: buffer_memmap.hpp  camera.hpp  camera2cv.hpp  camera_frame.hpp  camera_http.hpp  camera_info.hpp  camera_manager.hpp  camera_util.hpp  convert.hpp
camera/src/: buffer_memmap.cpp  camera.cpp  camera_http.cpp  camera_info.cpp  camera_util.cpp  camera_v4l2.cpp  camera_winrt.cpp  convert.cpp
camera/test/: camera_tests.cpp
common/: CMakeLists.txt
common/inc/: args.hpp  config.hpp  errors.hpp  log.hpp  platform.hpp  string_utils.hpp  system_utils.hpp  xml_factory.hpp
common/src/: errors.cpp  platform.cpp  string_utils.cpp  system_utils.cpp  xml_factory_linux.cpp  xml_factory_winrt.cpp
common/test/: CMakeLists.txt  badtest.xml  common_tests.cpp  test.xml
network/: CMakeLists.txt
network/inc/: binary_curl_client.hpp  http_client.hpp  network.hpp
network/src/: binary_curl_client.cpp  http_client.cpp  network.cpp
network/test/: CMakeLists.txt
python/: CMakeLists.txt  all_includes.hpp  zebralpy.cpp
res/: large-square-board.ai  readme.txt
res/cal/: large-square-board.ai
serial/: CMakeLists.txt
serial/inc/: serial_line_channel.hpp
serial/src/: serial_info.cpp  serial_line_channel.cpp  serial_line_channel_linux.cpp  serial_line_channel_winrt.cpp
serial/test/: serial_test.cpp
src/: zebral.cpp
test/: CMakeLists.txt  zebral_test.cpp
